--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1 {
 select {
   display: block;
 }
+
 .input-field {
   text-align: center;
 }
@@ -33,6 +34,13 @@ select {
   margin-top: 100px;
   margin-bottom: 50px;
 }
+.hide {
+  display: none;
+}
+
+.hide-button {
+  display: none;
+}
 
 #input-todos {
   text-align: center;
@@ -45,6 +53,7 @@ select {
 #date {
   display: block;
 }
+
 #si-week-input-data,
 .data {
   display: grid;
